[package]
name = "streaming-median"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
description = "Provides a structure for calculating median values"
license = "MIT OR Apache-2.0"
keywords = ["median", "medians"]



[dependencies]

arraydeque = "0.4.3"
criterion = "0.2.5"
xorshift = "*"
quickcheck = "0.7.2"
rand = "0.6.1"

[[bench]]
name = "streaming_median_bench"
harness = false
